2015-07-28  Raphael 'kena' Poss  <r.poss@uva.nl>

	Fix the benchmarks to fit in the new benchmarking framework.

	* benchmarks/blas/blasbench.h,
	* benchmarks/ca/benchca.c,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/livermore/ll-generate.py,
	* benchmarks/mandel/mandel.c,
	* benchmarks/smooth/smooth.c,
	* demo/msort.c: Ensure that the main function
	is a thread program.

2015-07-27  Raphael 'kena' Poss  <r.poss@uva.nl>

	Automate the generation of libbench to multiple targets.

	* benchmarks/lib/genmake.sh: Generate Makefile rules automatically.

	* benchmarks/lib/Makefile.am: Simplify, use the generated rules.
	* build-aux/benchmarks.mk: Simplify, use the generated flags.

	* bootstrap: Ensure the rules are generated when bootstrapping.

2015-07-27  Raphael 'kena' Poss  <r.poss@uva.nl>

	Add some demonstration programs.

	* demo/msort.c: Demonstrate a parallel merge sort.
	* demo/uart.c: Demonstrate a MGSim UART driver.
	* demo/speed.c: Demonstrate the flow of time.

	* demo/msort.c.d10,
	* demo/msort.c.d16: Example inputs for merge sort.

	* demo/Makefile.am (DEMOS): List the new programs.

2015-07-27  Raphael 'kena' Poss  <r.poss@uva.nl>

	Port the demo and benchmark programs to the latest toolchain.

	* demo/tmalloc.c,
	* demo/sep.c,
	* demo/pi.c,
	* demo/roman.c,
	* demo/ca1d_demo.c,
	* demo/ca1d_demo2.c,
	* demo/ca1d_main.c
	* demo/fibonacci.c,
	* benchmarks/sha1/sha1_alt.c,
	* benchmarks/sha1/sha1.c,
	* benchmarks/lib/benchmark.c: Read input arguments using
	argc/argv/getopt.

	* demo/pi.c,
	* demo/fibre.c: Ignore execution results on MIPSel targets, which
	do not support FP yet.

	* demo/pi.c: Also output different roundings.

	* benchmarks/sha1/sha1_alt.c,
	* benchmarks/sha1/sha1.c: Avoid generating code on platforms which
	do not support that many shared parameters.

	* benchmarks/mandel/mandel.c: Ensure main exits with a return
	code.

	* benchmarks/smooth/smooth.c: Avoid including obsolete header
	`slr.h'.
